fix post title being truncated on full view
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@17194 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_forums.scss
+++ b/src/main/resources/scss/_forums.scss
@@ -167,6 +167,7 @@
 			border-width: 0;
 			.title {
 				cursor: default;
+				white-space: normal;
 			}
 		}
 
